--- a/src/LockScreen/LockScreen.css
+++ b/src/LockScreen/LockScreen.css
@@ -20,6 +20,30 @@
   right: 0;
   left: 0;
   height: 100%;
-  box-shadow: rgb(108, 108, 108) 0px 4px 10px;
+  box-shadow: rgba(0, 0, 0, 0.67) 0px 4px 10px;
   transition: transform 0.15s;
+}
+
+.blur-bgimage {
+    overflow: hidden;
+    margin: 0;
+}
+
+.blur-bgimage:before {
+    content: "";
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    background: inherit;
+    z-index: -1;
+
+    filter        : blur(10px);
+    -moz-filter   : blur(10px);
+    -webkit-filter: blur(10px);
+    -o-filter     : blur(10px);
+
+    transition        : all 2s linear;
+    -moz-transition   : all 2s linear;
+    -webkit-transition: all 2s linear;
+    -o-transition     : all 2s linear;
 }
