--- a/src/LoginScreen/LoginScreen.css
+++ b/src/LoginScreen/LoginScreen.css
@@ -67,3 +67,24 @@
 .power-dropdown:hover, .power-dropdown:active {
   background-color: #0003;
 }
+
+#username-warning{
+  color:red;
+  text-align:center;
+  margin:10px;
+  background-color: #fff;
+  z-index: 10;
+  border-radius:5px;
+  padding:5px 10px;
+  display: none;
+}
+#password-warning{
+  color:red;
+  text-align:center;
+  margin:10px;
+  background-color: #fff;
+  z-index: 10;
+  border-radius:5px;
+  padding:5px 10px;
+  display: none;
+}
