disambiguate iskra-webkit-greeter

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
 }
 
 @font-face {
-  font-family:anticon;
-  font-display:fallback;
-  src:url("/usr/share/lightdm-webkit/themes/iskra-webkit-greeter/src/font/font_148784_v4ggb6wrjmkotj4i.woff") format("woff")}
+  font-family: anticon;
+  font-display: fallback;
+  src: url('/usr/share/lightdm-webkit/themes/iskra/src/font/font_148784_v4ggb6wrjmkotj4i.woff')
+    format('woff');
+}
